Add Generate Cert, when startup.

--- a/files/conf/nginx/sites/default.conf
+++ b/files/conf/nginx/sites/default.conf
@@ -54,8 +54,8 @@ server {
 #    listen       443 ssl;
 #    server_name  localhost;
 
-#    ssl_certificate      cert.pem;
-#    ssl_certificate_key  cert.key;
+#    ssl_certificate      conf/keys/cert.pem;
+#    ssl_certificate_key  conf/keys/key.pem;
 
 #    ssl_session_cache    shared:SSL:1m;
 #    ssl_session_timeout  5m;
