--- a/wne/wne.csproj
+++ b/wne/wne.csproj
@@ -165,6 +165,9 @@
     <Content Include="Resources\wne_close1.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /YE "$(SolutionDir)files\*" "$(SolutionDir)$(Configuration)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
