Fix config file read bug.

--- a/files/conf/nginx/sites/default.conf
+++ b/files/conf/nginx/sites/default.conf
@@ -11,7 +11,7 @@ server {
 
 	location / {
 		root   $root_path;
-		index  index.html index.htm;
+		index  index.php index.html index.htm;
 	}
 
 	#error_page  404              /404.html;
