--- a/files/conf/nginx/sites/tools.conf
+++ b/files/conf/nginx/sites/tools.conf
@@ -5,14 +5,12 @@ server {
 
 	#charset koi8-r;
 
-	access_log  logs/tools.access.log;
+	access_log  logs/nginx/tools.access.log;
 	
 	client_max_body_size    20m;
 
-	location / {
-		root   $root_path;
-		index  index.html index.htm;
-	}
+	root   $root_path;
+	index  index.php index.html index.htm;
 
 	#error_page  404              /404.html;
 
