--- a/files/conf/php/php.ini
+++ b/files/conf/php/php.ini
@@ -874,24 +874,24 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5+).
 ; Be sure to appropriately set the extension_dir directive.
 ;
-;extension=php_bz2.dll
-;extension=php_curl.dll
+extension=php_bz2.dll
+extension=php_curl.dll
 ;extension=php_fileinfo.dll
 ;extension=php_ftp.dll
 ;extension=php_gd2.dll
 ;extension=php_gettext.dll
 ;extension=php_gmp.dll
 ;extension=php_intl.dll
-;extension=php_imap.dll
+extension=php_imap.dll
 ;extension=php_interbase.dll
 ;extension=php_ldap.dll
-;extension=php_mbstring.dll
+extension=php_mbstring.dll
 ;extension=php_exif.dll      ; Must be after mbstring as it depends on it
-;extension=php_mysqli.dll
+extension=php_mysqli.dll
 ;extension=php_oci8_12c.dll  ; Use with Oracle Database 12c Instant Client
-;extension=php_openssl.dll
+extension=php_openssl.dll
 ;extension=php_pdo_firebird.dll
-;extension=php_pdo_mysql.dll
+extension=php_pdo_mysql.dll
 ;extension=php_pdo_oci.dll
 ;extension=php_pdo_odbc.dll
 ;extension=php_pdo_pgsql.dll
@@ -906,7 +906,7 @@ default_socket_timeout = 60
 ;extension=php_soap.dll
 ;extension=php_sockets.dll
 ;extension=php_sqlite3.dll
-;extension=php_tidy.dll
+extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 
