Fix mysql stop bug.

--- a/files/conf/mariadb/my.def.ini
+++ b/files/conf/mariadb/my.def.ini
@@ -1,44 +1,44 @@
+# Example MariaDB config file for medium systems.
+#
+# This is for a system with little memory (32M - 64M) where MariaDB plays
+# an important part, or systems up to 128M where MariaDB is used together with
+# other programs (such as a web server)
+#
+# MariaDB programs look for option files in a set of
+# locations which depend on the deployment platform.
+# You can copy this option file to one of those
+# locations. For information about these locations, do:
+# 'my_print_defaults --help' and see what is printed under
+# Default options are read from the following files in the given order:
+# More information at: http://dev.mysql.com/doc/mysql/en/option-files.html
+#
+# In this file, you can use all long options that a program supports.
+# If you want to know which options a program supports, run the program
+# with the "--help" option.
+
 # The following options will be passed to all MariaDB clients
 [client]
 #password	= your_password
 port		= 3306
-#socket		= /tmp/mysql.sock
+socket		= /tmp/mysql.sock
 
 # Here follows entries for some specific programs
 
 # The MariaDB server
 [mysqld]
-lower_case_table_names=1
 port		= 3306
-#socket		= /tmp/mysql.sock
+socket		= /tmp/mysql.sock
 skip-external-locking
-key_buffer_size = 256M
+key_buffer_size = 16M
 max_allowed_packet = 1M
-table_open_cache = 256
-sort_buffer_size = 1M
-read_buffer_size = 1M
-read_rnd_buffer_size = 4M
-myisam_sort_buffer_size = 64M
-thread_cache_size = 8
-query_cache_size= 16M
+table_open_cache = 64
+sort_buffer_size = 512K
+net_buffer_length = 8K
+read_buffer_size = 256K
+read_rnd_buffer_size = 512K
+myisam_sort_buffer_size = 8M
 
-default-storage-engine=MyISAM
-
-bind-address = 127.0.0.1
-character_set_server = utf8
-datadir = data/mariadb
-
-innodb_data_home_dir = data/mariadb
-innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = data/mariadb
-
-innodb_buffer_pool_size = 256M
-innodb_additional_mem_pool_size = 20M
-
-innodb_log_file_size = 64M
-innodb_log_buffer_size = 8M
-innodb_flush_log_at_trx_commit = 1
-innodb_lock_wait_timeout = 50
+thread_stack = 240K
 
 # Point the following paths to different dedicated disks
 #tmpdir		= /tmp/
@@ -53,10 +53,10 @@ innodb_lock_wait_timeout = 50
 
 # Replication Master Server (default)
 # binary logging is required for replication
-#log-bin=mysql-bin
+log-bin=mysql-bin
 
 # binary logging format - mixed recommended
-#binlog_format=mixed
+binlog_format=mixed
 
 # required unique id between 1 and 2^32 - 1
 # defaults to 1 if master-host is not set
@@ -120,17 +120,17 @@ server-id	= 1
 
 # Uncomment the following if you are using InnoDB tables
 #innodb_data_home_dir = C:\\mysql\\data\\
-#innodb_data_file_path = ibdata1:10M:autoextend
+innodb_data_file_path = ibdata1:10M:autoextend
 #innodb_log_group_home_dir = C:\\mysql\\data\\
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
-#innodb_buffer_pool_size = 256M
-#innodb_additional_mem_pool_size = 20M
+innodb_buffer_pool_size = 64M
+innodb_additional_mem_pool_size = 8M
 # Set .._log_file_size to 25 % of buffer pool size
-#innodb_log_file_size = 64M
-#innodb_log_buffer_size = 8M
+innodb_log_file_size = 5M
+innodb_log_buffer_size = 8M
 #innodb_flush_log_at_trx_commit = 1
-#innodb_lock_wait_timeout = 50
+innodb_lock_wait_timeout = 60
 
 [mysqldump]
 quick
@@ -142,8 +142,8 @@ no-auto-rehash
 #safe-updates
 
 [myisamchk]
-key_buffer_size = 128M
-sort_buffer_size = 128M
+key_buffer_size = 20M
+sort_buffer_size = 20M
 read_buffer = 2M
 write_buffer = 2M
 
