--- a/files/conf/nginx/sites/tools.conf
+++ b/files/conf/nginx/sites/tools.conf
@@ -11,6 +11,11 @@ server {
 
 	root   $root_path;
 	index  index.php index.html index.htm;
+	
+	location / {
+		allow 127.0.0.1;
+		deny all;
+	}
 
 	#error_page  404              /404.html;
 
