--- a/files/conf/nginx/sites/default.conf
+++ b/files/conf/nginx/sites/default.conf
@@ -2,16 +2,15 @@ server {
 	listen       80;
 	server_name  localhost;
 	set $root_path 'home/default/html';
-
-	#charset koi8-r;
+	root   $root_path;
 
 	access_log  logs/nginx/default.access.log;
 	
 	client_max_body_size    20m;
+	index  index.php index.html index.htm;
 
 	location / {
-		root   $root_path;
-		index  index.php index.html index.htm;
+		#try_files $uri $uri/ /index.php?$query_string;
 	}
 
 	#error_page  404              /404.html;
@@ -19,9 +18,6 @@ server {
 	# redirect server error pages to the static page /50x.html
 	#
 	error_page   500 502 503 504  /50x.html;
-	location = /50x.html {
-		root   $root_path;
-	}
 
 	# proxy the PHP scripts to Apache listening on 127.0.0.1:80
 	#
